[package]
name = "meridian"
version = "0.4.0"
edition = "2021"
description = "Rust client for the Meridian Boundary Proxy — one stable contract across every provider"
license = "MIT"
repository = "https://github.com/Raghaverma/meridianjs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"

[[example]]
name = "basic"
